# git-to-context

./: README.md  git_to_context.py  pyproject.toml
