[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-to-context"
version = "0.1.0"
description = "Flatten any git repo or local directory into a single static HTML page for humans or LLMs"
readme = "README.md"
license = "0BSD"
authors = [
    {name = "Ivan Baluta", email = "ivanbaluta.dev@gmail.com"},
    {name = "Andrej Karpathy"},
]
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.8.2",
    "pygments>=2.19.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
gtc = "git_to_context:main"
git-to-context = "git_to_context:main"

[project.urls]
Homepage = "https://github.com/ivanbaluta/git-to-context"
Repository = "https://github.com/ivanbaluta/git-to-context"
